# prolog-with-parsec

./: .gitmodules  CMakeLists.txt  README.md
include/: ArgumentParser.hpp  PrologChecker.hpp  PrologObject.hpp  PrologObjectPrinter.hpp  SyntaxTree.hpp
src/: ArgumentParser.cpp  Exception.cpp  PrologChecker.cpp  PrologObject.cpp  PrologObjectPrinter.cpp  SyntaxTree.cpp  TestPrologChecker.cpp  main.cpp
